# collectd

./: .gitignore  .shippable.yml  Makefile.am  configure.ac  meson.build
src/: cpu.c  rrdcached.c
src/daemon/: plugin.c  plugin.h
src/libcollectdclient/: client.c  network_parse.c  server.c
src/libcollectdclient/collectd/: client.h  network_parse.h  server.h  types.h
